# OpenFieldDay

./: .gitignore  CLAUDE.md  LICENSE  README.md  package.json  pyproject.toml
deploy/: openfieldday.service
docs/superpowers/plans/: 2026-06-05-tv-scoreboard.md  2026-06-22-theme-builder.md
docs/superpowers/specs/: 2026-06-05-tv-scoreboard-design.md  2026-06-22-theme-builder-design.md
src/openfieldday/: __main__.py  app.py  config.py  events.py  models.py  modes.py  scoring.py  store.py
src/openfieldday/sources/: base.py  n3fjp.py  n3fjp_parser.py
src/openfieldday/static/: app.js  builder.html  builder.js  colormath.js  colormath.test.js  index.html  settings.html  settings.js  styles.css  theme.js
tests/: test_app.py  test_config.py  test_events.py  test_models.py  test_modes.py  test_n3fjp_parser.py  test_n3fjp_source.py  test_scoring.py  test_smoke.py  test_source_base.py  test_store.py
tests/fixtures/: list_includeall.txt
