[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "openfieldday"
version = "0.1.0"
description = "Read-only ARRL Field Day TV scoreboard fed by the N3FJP TCP API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pyyaml>=6",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "httpx>=0.27"]

[project.scripts]
openfieldday = "openfieldday.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    # Starlette's TestClient warns that httpx support is deprecated in favor of
    # httpx2; not actionable for us and clutters output.
    "ignore:Using `httpx` with `starlette.testclient` is deprecated",
]
